Doc: complete address documentation
